New About Concept

--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1748"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1755"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1748" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1748"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1755" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1755"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1748">
-<script src="./assets/js/layout.ie.js?1.0.1748"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1755">
+<script src="./assets/js/layout.ie.js?1.0.1755"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1748"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1755"></script>
 	
     <title>About Smart Sprout Digital Marketing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1748">
-	<script src="./assets/js/script.js?1.0.1748"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1755">
+	<script src="./assets/js/script.js?1.0.1755"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -47,7 +47,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   padding-top: 40px
 }</style>
 </head>
-<body class=" bootstrap bd-body-7  bd-pagebackground  bd-margins">
+<body class=" bootstrap bd-body-1 
+ bd-homepage bd-pagebackground-3  bd-margins">
     <header class=" bd-headerarea-1 bd-margins">
         <section class=" bd-section-4 bd-tagstyles" id="section4" data-section-title="">
     <div class="bd-container-inner bd-margins clearfix">
@@ -320,26 +321,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </section>
 </header>
 	
-		<div class=" bd-stretchtobottom-2 bd-stretch-to-bottom" data-control-selector=".bd-content-12"><div class=" bd-content-12 ">
+		<div class=" bd-content-13">
     
     <div class=" bd-htmlcontent-5 bd-margins" 
  data-page-id="page.16">
-    <section class=" bd-section-15 bd-tagstyles" id="section15" data-section-title="Section">
+    <section class=" bd-section-25 hidden-xs bd-tagstyles" id="section25" data-section-title="Section">
     <div class="bd-container-inner bd-margins clearfix">
-        <div class=" bd-layoutbox-7 bd-no-margins clearfix">
+        <div class=" bd-layoutbox-45 bd-no-margins clearfix">
     <div class="bd-container-inner">
+        <h2 class=" bd-textblock-175 bd-no-margins bd-content-element">
+    Results-focused Digital Marketing Support
+</h2>
+    </div>
+</div>
+    </div>
+</section>
+	
+		<section class=" bd-section-33 bd-tagstyles" id="section33" data-section-title="Section">
+    <div class="bd-container-inner bd-margins clearfix">
         <h1 class=" bd-textblock-14 bd-content-element">
     About Smart Sprout Digital Marketing
 </h1>
+    </div>
+</section>
 	
-		<div class=" bd-spacer-22 clearfix"></div>
+		<section class=" bd-section-15 bd-tagstyles" id="section15" data-section-title="Section">
+    <div class="bd-container-inner bd-margins clearfix">
+        <div class=" bd-layoutbox-7 bd-no-margins clearfix">
+    <div class="bd-container-inner">
+        <div class=" bd-spacer-22 clearfix"></div>
 	
 		<div class=" bd-layoutcontainer-8 bd-columns bd-no-margins">
     <div class="bd-container-inner">
         <div class="container-fluid">
             <div class="row ">
                 <div class=" bd-columnwrapper-35 
- col-sm-8">
+ col-sm-12">
     <div class="bd-layoutcolumn-35 bd-column" ><div class="bd-vertical-align-wrapper"><h2 class=" bd-textblock-40 bd-content-element">
     What is Smart Sprout Digital Marketing?
 </h2>
@@ -372,19 +389,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books.<br><br>This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
 </p></div></div>
 </div>
-	
-		<div class=" bd-columnwrapper-36 
- col-sm-4">
-    <div class="bd-layoutcolumn-36 bd-column" ><div class="bd-vertical-align-wrapper"><img class="bd-imagelink-23 bd-own-margins bd-imagestyles   "  src="./assets/images/d41f74ceebc4378253cbdc3f9b55ecae_MikeSmartSproutAbout.png">
-	
-		<p class=" bd-textblock-21 bd-content-element">
-    Michael Kirk, Digital Marketer
-</p>
-	
-		<p class=" bd-textblock-48 bd-content-element">
-    Welcome to Smart Sprout. If you have any questions about the services I offer, please <b><a href="https://smartsprout.co.uk/contact">get in touch</a></b>.
-</p></div></div>
-</div>
             </div>
         </div>
     </div>
@@ -398,7 +402,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
 </section>
 </div>
-</div></div>
+</div>
 	
 		<footer class=" bd-footerarea-1 bd-margins">
         <div class="bd-containereffect-139 container-effect container "><div class=" bd-layoutbox-38  bd-no-margins clearfix">
