Home format change

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1760"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1761"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1760" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1760"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1761" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1761"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1760">
-<script src="./assets/js/layout.ie.js?1.0.1760"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1761">
+<script src="./assets/js/layout.ie.js?1.0.1761"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1760"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1761"></script>
 	
     <title>Affordable Digital Marketing Support | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1760">
-	<script src="./assets/js/script.js?1.0.1760"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1761">
+	<script src="./assets/js/script.js?1.0.1761"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -539,8 +539,8 @@ p {
 	
 		<section class=" bd-section-22 bd-tagstyles" id="section22" data-section-title="Section">
     <div class="bd-container-inner bd-margins clearfix">
-        <h2 class=" bd-textblock-48 bd-content-element">
-    Affordable SEO and Content Marketing Agency
+        <h2 class=" bd-textblock-446 bd-no-margins bd-content-element">
+    Affordable SEO and Content Marketing Agency<br>
 </h2>
 	
 		<h3 class=" bd-textblock-21 bd-content-element">
@@ -580,7 +580,7 @@ p {
                                
                                >
                                 <img class=" bd-imagestyles"
-                                     src="https://smartsprout.co.uk/logo-spacer.png"
+                                     src="./assets/images/35c04bdb6011171803e035cd9587fa9e_logospacerwhite.png"
                                       >
                             </a>
                 </div>
@@ -605,7 +605,7 @@ p {
 </p>
 	
 		<p class=" bd-textblock-372 bd-content-element">
-    To lower content marketing costs, Smart Sprout suggests setting some time aside for content curation, planning and writing. Unless you have a large marketing budget, it is recommended that you create much of your own content.<br><br><br>Creating content can be daunting, but as the editor of an online magazine, Mike offers 1-2-1 coaching on content research, article/content calendar planning, and witting for online audiences.
+    To lower content marketing costs, Smart Sprout suggests setting some time aside for content curation, planning and writing. Unless you have a large marketing budget, it is recommended that you create much of your own content.<br><br>Creating content can be daunting, but as the editor of an online magazine, Mike offers 1-2-1 coaching on content research, article/content calendar planning, and witting for online audiences.
 </p>
 	
 		<div class=" bd-spacer-11 clearfix"></div>
