--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1769"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1771"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1769" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1769"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1771" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1771"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1769">
-<script src="./assets/js/layout.ie.js?1.0.1769"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1771">
+<script src="./assets/js/layout.ie.js?1.0.1771"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1769"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1771"></script>
 	
     <title>Low-cost Digital Marketing Support Pricing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1769">
-	<script src="./assets/js/script.js?1.0.1769"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1771">
+	<script src="./assets/js/script.js?1.0.1771"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -361,7 +361,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h4>
 	
 		<h2 class=" bd-textblock-18 bd-content-element">
-    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>60
+    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>77
 </h2>
 	
 		<p class=" bd-textblock-34 bd-content-element">
@@ -378,7 +378,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a>
 	
 		<p class=" bd-textblock-67 bd-content-element">
-    Mentoring sessions (weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>Support (email)
+    Mentoring sessions (4x monthly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>Support (email)
 </p>
     </div>
 </div></div></div>
@@ -393,7 +393,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h4>
 	
 		<h2 class=" bd-textblock-55 bd-content-element">
-    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>97
+    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>127
 </h2>
 	
 		<p class=" bd-textblock-53 bd-content-element">
@@ -410,7 +410,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a>
 	
 		<p class=" bd-textblock-77 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br>
+    Mentoring sessions (8x monthly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br>
 </p>
     </div>
 </div></div></div>
@@ -420,12 +420,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  col-sm-3">
     <div class="bd-layoutcolumn-25 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-52 bd-no-margins clearfix">
     <div class="bd-container-inner">
-        <h4 class=" bd-textblock-173 bd-content-element">
+        <h4 class=" bd-textblock-178 bd-content-element">
     Hands-on Support
 </h4>
 	
-		<h2 class=" bd-textblock-172 bd-content-element">
-    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>147
+		<p class=" bd-textblock-48 bd-content-element">
+    from
+</p>
+	
+		<h2 class=" bd-textblock-292 bd-content-element">
+    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>157
 </h2>
 	
 		<p class=" bd-textblock-171 bd-content-element">
@@ -442,7 +446,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a>
 	
 		<p class=" bd-textblock-177 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br>
+    Mentoring sessions (4x monthly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>On -page optimisation (1 day)<br><br>Monthly report (phone/email)*<br>
 </p>
     </div>
 </div></div></div>
@@ -461,7 +465,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </p>
 	
 		<h2 class=" bd-textblock-183 bd-content-element">
-    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>347
+    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>357
 </h2>
 	
 		<p class=" bd-textblock-182 bd-content-element">
@@ -478,7 +482,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a>
 	
 		<p class=" bd-textblock-188 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>Discounted team training<br><br>SEO &amp; PPC management (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
+    Mentoring sessions (4x monthly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>Discounted team training<br><br>SEO &amp; PPC management (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
 </p>
     </div>
 </div></div></div>
@@ -673,7 +677,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="bd-containereffect-1 container-effect container "><div class=" bd-layoutbox-17  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <p class=" bd-textblock-17 bd-content-element">
-    *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs.
+    *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs. Mentoring sessions last 25min, but can be extended.
 </p>
     </div>
 </div>
