--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1773"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1774"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1773" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1773"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1774" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1774"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1773">
-<script src="./assets/js/layout.ie.js?1.0.1773"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1774">
+<script src="./assets/js/layout.ie.js?1.0.1774"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1773"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1774"></script>
 	
     <title>Low-cost Digital Marketing Support Pricing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1773">
-	<script src="./assets/js/script.js?1.0.1773"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1774">
+	<script src="./assets/js/script.js?1.0.1774"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -429,7 +429,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </p>
 	
 		<h2 class=" bd-textblock-292 bd-content-element">
-    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>157
+    <span style="font-size: 45px; line-height: 0; position: relative; vertical-align: baseline; top: -0.5em;">£</span>177
 </h2>
 	
 		<p class=" bd-textblock-171 bd-content-element">
@@ -446,7 +446,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a>
 	
 		<p class=" bd-textblock-177 bd-content-element">
-    Mentoring sessions (8x monthly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>On -page optimisation (1 day)<br><br>Monthly report (phone/email)*<br>
+    Mentoring sessions (4x monthly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>On -page optimisation (half day)<br><br>Monthly report (phone/email)*<br>
 </p>
     </div>
 </div></div></div>
@@ -482,7 +482,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </a>
 	
 		<p class=" bd-textblock-188 bd-content-element">
-    Mentoring sessions (8x monthly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>Discounted team training<br><br>SEO &amp; PPC management (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
+    Mentoring sessions (4x monthly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>Discounted team training<br><br>SEO &amp; PPC management (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
 </p>
     </div>
 </div></div></div>
