--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1774"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1777"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1774" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1774"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1777" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1777"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1774">
-<script src="./assets/js/layout.ie.js?1.0.1774"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1777">
+<script src="./assets/js/layout.ie.js?1.0.1777"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1774"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1777"></script>
 	
     <title>About Smart Sprout Digital Marketing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1774">
-	<script src="./assets/js/script.js?1.0.1774"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1777">
+	<script src="./assets/js/script.js?1.0.1777"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -364,7 +364,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-44 bd-content-element">
-    Smart Sprout is a one-man&nbsp;digital agency focused on making digital support accessible to all businesses. My time is spent mentoring business owners/marketing teams on best practice and routinely carrying out market research, optimising websites and managing paid campaigns.<br><br>I also collaborate with a number of professionals who provide quality work at good value — such as design &amp; illustration, website development, copy writing and printing (you are welcome to source these services elsewhere if preferred).
+    Smart Sprout is a one-man&nbsp;digital agency, focused on making digital support accessible to all businesses. My time is spent mentoring business owners/marketing teams on best practice and routinely carrying out market research, optimising websites and managing paid campaigns.<br><br>I also collaborate with a number of professionals who provide quality work at good value — such as design &amp; illustration, website development, copy writing and printing (you are welcome to source these services elsewhere if preferred).
 </p>
 	
 		<h2 class=" bd-textblock-19 bd-content-element">
@@ -388,7 +388,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </h2>
 	
 		<p class=" bd-textblock-36 bd-content-element">
-    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books.<br><br>This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
+    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books.<br><br>This includes, properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
 </p></div></div>
 </div>
             </div>
