--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1774"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1777"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1774" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1774"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1777" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1777"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1774">
-<script src="./assets/js/layout.ie.js?1.0.1774"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1777">
+<script src="./assets/js/layout.ie.js?1.0.1777"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1774"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1777"></script>
 	
     <title>Affordable Digital Marketing Support | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1774">
-	<script src="./assets/js/script.js?1.0.1774"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1777">
+	<script src="./assets/js/script.js?1.0.1777"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -530,7 +530,7 @@ p {
 </h2>
 	
 		<p class=" bd-textblock-88 bd-content-element">
-    Smart Sprout is a one-man digital marketing agency that provides seamless, digital marketing services and effective results at a low price-tag. In addition to affordable digital marketing support, Smart Sprout delivers, agency-like, managed services such as copy-writing, PR, graphic design and website development through trusted, reliable third parties. Because these services are provided externally, there are no salaries to pay. Therefore, the client only pays for what they get.<br><br>Clients are also encouraged to learn simple, effective digital marketing methods through weekly&nbsp;mentoring/coaching sessions. This helps to improve online processes moving forward, reduce overall costs and enhance results. If you have any questions, or you would just like a chat please <b><a href="https://smartsprout.co.uk/contact.html" draggable="false">get in touch</a></b>.
+    Smart Sprout is a one-man digital marketing agency that provides seamless, digital marketing services and effective results at a low price-tag. In addition to affordable digital marketing support, Smart Sprout delivers, agency-like, managed services such as copy-writing, PR, graphic design and website development through trusted, reliable third parties. Because these services are provided externally, there are no salaries to pay. Therefore, the client only pays for what they get.<br><br>Clients are encouraged to learn simple, effective digital marketing methods through weekly&nbsp;mentoring/coaching sessions. This helps to improve online processes moving forward, reduce overall costs and enhance results. If you have any questions, or you would just like a chat please get in touch via the contact form.
 </p>
 	
 		<div class=" bd-spacer-24 clearfix"></div>
