--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1774"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1777"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1774" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1774"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1777" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1777"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1774">
-<script src="./assets/js/layout.ie.js?1.0.1774"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1777">
+<script src="./assets/js/layout.ie.js?1.0.1777"></script>
 <![endif]-->
 <link class="" href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic|Archivo+Black:regular&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1774"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1777"></script>
 	
     <title>Low-cost Digital Marketing Support Pricing | Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1774">
-	<script src="./assets/js/script.js?1.0.1774"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1777">
+	<script src="./assets/js/script.js?1.0.1777"></script>
     <meta charset="utf-8">
     
     <!-- Google Search Console -->
@@ -677,7 +677,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="bd-containereffect-1 container-effect container "><div class=" bd-layoutbox-17  bd-no-margins clearfix">
     <div class="bd-container-inner">
         <p class=" bd-textblock-17 bd-content-element">
-    *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs. Mentoring sessions last 25min, but can be extended.
+    *7 day support and mentoring is appointment only, is subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs. Mentoring sessions last roughly 25min, but can be extended. If you have any questions, please contact me.
 </p>
     </div>
 </div>
